# api-goat

./: .dockerignore  .env  .travis.yml  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose-entrypoint.sh  docker-compose.yml
http_requests/: auth.http
migrations/2020-08-20-161200_users/: up.sql
src/: main.rs
src/app/: config.rs  mod.rs  router.rs  server.rs
src/app/auth/: mod.rs
src/app/config/: mod.rs
src/app/database/: mod.rs  schema.rs  user.rs
src/app/database/models/: user.rs
src/app/users/: mod.rs
