[package]
name = "api-goat"
version = "0.1.0"
authors = ["Štefan Prokop <sprokop1010@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["mysql"] }
env_logger = "0.7.1"
log = "0.4.11"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
