[package]
name = "api-goat"
version = "0.1.0"
authors = ["Štefan Prokop <sprokop1010@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres"] }
env_logger = "0.7.1"
log = "0.4.11"
serde = "1.0.115"
jwt = "0.10.0"
sha2 = "0.9.1"
hmac = "0.8.0"
serde_json = "1.0.57"
